[package]
name = "LOCKIN"
version = "1.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2"] }
axum = "0.8"
tower-http = { version = "0.7", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
futures-util = "0.3"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
rustls = "0.23"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
